[EDIT] Cashflow : fixing gap

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -114,12 +114,13 @@
 
 
 .card-wrapper {
-	@apply border border-gray-1 shadow-[0px_-28px_84px_-24px_rgba(223,244,246,0.06)_inset] px-0 pb-1 pt-1 rounded-2xl border-solid;
+	@apply border border-gray-1 px-0 pb-1 pt-1 rounded-2xl border-solid;
 	background: radial-gradient(
       100% 120.05% at 50% 50%,
       rgba(205, 251, 255, 0) 33.78%,
       rgba(205, 251, 255, 0.04) 100%,
     rgba(205, 251, 255, 0)
+  box-shadow: 0px -28px 84px -24px #DFF4F60F inset;
   );
 
 	.header {
